adding delete button

--- a/whosPaying.html
+++ b/whosPaying.html
@@ -6,7 +6,7 @@
     <meta name="description" content="¡Realiza un sorteo entre tus amigos para saber quien pagará el almuerzo hoy!">
     <meta name="keywords" content="almuerzo, amigos, sorteo, azar, random">
     <title>WhosPaying</title>
-    <link rel="icon" href="images/whospaying.svg" type="image/png" />
+    <link rel="icon" href="images/faviconwhos.png" type="image/png" />
 </head>
 <body>
     <section class="description">
